--- a/src/FSharpCommands/FSharpCommands.csproj
+++ b/src/FSharpCommands/FSharpCommands.csproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\FormatDocumentCommand.cs" />
+    <Compile Include="Services.cs" />
     <Compile Include="StandardCommandDispatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextViewHookHelper.cs" />
