Show wait cursor while formatting
Sometimes it takes a little while to warm up the F# compiler

--- a/src/FSharpCommands/FSharpCommands.csproj
+++ b/src/FSharpCommands/FSharpCommands.csproj
@@ -105,6 +105,8 @@
     <Compile Include="StandardCommandDispatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextViewHookHelper.cs" />
+    <Compile Include="Utils\Cursor.cs" />
+    <Compile Include="Utils\Disposable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
