Updated Fantomas to 0.9.3

--- a/src/FSharpCommands/FSharpCommands.csproj
+++ b/src/FSharpCommands/FSharpCommands.csproj
@@ -38,22 +38,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Args">
-      <HintPath>..\packages\Fantomas.0.9.0\lib\Args.dll</HintPath>
+    <Reference Include="Args, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Fantomas.0.9.3\lib\Args.dll</HintPath>
     </Reference>
-    <Reference Include="Fantomas">
-      <HintPath>..\packages\Fantomas.0.9.0\lib\Fantomas.exe</HintPath>
+    <Reference Include="Fantomas, Version=0.9.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Fantomas.0.9.3\lib\Fantomas.exe</HintPath>
     </Reference>
-    <Reference Include="FantomasLib">
-      <HintPath>..\packages\Fantomas.0.9.0\lib\FantomasLib.dll</HintPath>
+    <Reference Include="FantomasLib, Version=0.9.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Fantomas.0.9.3\lib\FantomasLib.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Compiler, Version=4.3.0.0, Culture=neutral, PublicKeyToken=f536804aa0eb945b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Fantomas.0.9.0\lib\FSharp.Compiler.dll</HintPath>
+      <HintPath>..\packages\Fantomas.0.9.3\lib\FSharp.Compiler.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>..\packages\Fantomas.0.9.0\lib\FSharp.Core.dll</HintPath>
+      <HintPath>..\packages\Fantomas.0.9.3\lib\FSharp.Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.CoreUtility, Version=11.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <Private>False</Private>
